--- a/frontend_client/src/views/FrontPage/FrontPage.css
+++ b/frontend_client/src/views/FrontPage/FrontPage.css
@@ -9,9 +9,7 @@
     margin: 0 auto;
 }
 
-
-.frontpage-container{
-    background-color: var(--base-color);
+.frontpage-container {
 }
 
 /* Introduction section styling */
@@ -43,27 +41,25 @@
     margin-top: 20px;
 }
 
-
+/* Video container styling */
 .video-container {
     display: flex;
     justify-content: center;
     width: 100%;
     margin-top: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Optional: add shadow for depth */
-    border-radius: 10px; /* Optional: round corners */
-    overflow: hidden; /* Ensures video respects the border-radius */
-    max-width: 1200px; /* Set a maximum width for the video */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    overflow: hidden;
+    max-width: 1200px;
 }
 
-/* Raw video styling - making it larger */
+/* Raw video styling */
 .raw-video {
-    width: 100%; /* Set to 100% to take full width of the container */
-    height: auto; /* Maintain the aspect ratio */
-    max-height: 600px; /* Limit the maximum height for larger screens */
-    border-radius: 10px; /* Optional: round corners */
+    width: 100%;
+    height: auto;
+    max-height: 600px;
+    border-radius: 10px;
 }
-
-
 
 /* Widgets container styling */
 .widgets-section {
@@ -95,4 +91,36 @@
     justify-content: center;
     width: 100%;
     margin-top: 50px;
+}
+
+/* Mobile-specific styling */
+@media (max-width: 600px) {
+    .content-intro {
+        width: 100%; /* Make text take more space */
+        padding: 20px;
+    }
+
+    .text {
+        font-size: 1.1em; /* Slightly increase text size */
+    }
+
+    .video-container {
+        max-width: none; /* Remove maximum width restriction */
+        width: 350px; /* Make video take full width */
+    }
+
+    .raw-video {
+        width: 100%; /* Ensure video takes full width */
+        max-height: none; /* Remove height limit */
+    }
+
+    .widgets-section {
+        width: 100%;
+        padding: 10px;
+    }
+
+    .small-widgets, .large-widget {
+        flex-direction: column;
+
+    }
 }
