--- a/frontend_client/src/views/Login/Login.css
+++ b/frontend_client/src/views/Login/Login.css
@@ -34,6 +34,7 @@
 
 .google-sign-in-button {
     margin-top: 20px;
+    margin-bottom: 10px;
     padding: 10px 20px;
     background-color: #4285f4;
     color: white;
